old-kubernetes-cluster/arr-stack/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-kube
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 7878
  selector:
    app: radarr-kube
